# moltis

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  anthropic-oauth.html  authentication.html  changelog.html  channels.html  cloud-deploy.html  configuration.html  docker.html  fly.toml  installation.html  justfile  local-llm.html  mcp.html  mise.toml  nodes.html  openclaw-import.html  print.html  providers.html  render.yaml  sandbox.html  scheduling.html  searchindex.js  security.html  system-prompt.html  toc.html  toc.js
.config/: nextest.toml
.do/: deploy.template.yaml
.github/workflows/: build-and-upload.yml  ci.yml  codspeed.yml  docs.yml  e2e.yml  homebrew.yml  release.yml  sdk-ci.yml  sdk-release.yml
01/16f75fbec8/: metadata.json
16/4b7cc341db/: metadata.json
1f/a35df9dff1/: metadata.json
33/b3df44ce2f/: metadata.json
45/103f6f2eb5/: metadata.json
47/abc3396f8c/: metadata.json
53/33ef27d367/: metadata.json
56/f6e8c3d0b9/: metadata.json
60/f5d8da517a/: metadata.json
7a/2feec44213/: metadata.json
85/4bee72da09/: metadata.json
93/ba6ec20d7f/: metadata.json
apps/macos/: project.yml
c0/f98aa50283/: metadata.json
c2/d42febd038/: metadata.json
crates/cli/: Cargo.toml
crates/cron/: Cargo.toml
crates/gateway/: Cargo.toml
crates/httpd/: Cargo.toml
crates/skills/: Cargo.toml
crates/symphony/: Cargo.toml
crates/symphony/src/: config.rs  error.rs  lib.rs  models.rs  service.rs  template.rs  watcher.rs  workflow.rs  workspace.rs
crates/telegram/: Cargo.toml
crates/tools/: Cargo.toml
d5/b5fb8650fe/: metadata.json
docs/src/: SUMMARY.md  index.md  installation.md  sdk-go.md  sdk-libmoltis.md  sdk-python.md  sdk-typescript.md  sdks.md  symphony.md
e7/b94c8413c7/: metadata.json
ef/e666481f5a/: metadata.json
f0/91989adbca/: metadata.json
f7/6d526e2e6c/: metadata.json
fe/b0d6fa57d5/: metadata.json
scripts/: build-libmoltis-sdk.sh  export-graphql-schema.sh  local-validate.sh  run-zizmor-resilient.sh
sdks/: README.md  compatibility.json
sdks/go/: README.md  generate.go  genqlient.yaml  go.mod  go.sum  tools.go
sdks/libmoltis/: README.md
sdks/python/: README.md  pyproject.toml
sdks/python/src/moltis_sdk/: __init__.py  client.py  errors.py
sdks/python/tests/: test_ws_endpoint.py
sdks/schema/: schema.graphqls
(+254 files in other folders)
