[package]
edition.workspace = true
name              = "moltis-symphony"
version.workspace = true

[dependencies]
anyhow                 = { workspace = true }
async-trait            = { workspace = true }
dirs-next              = { workspace = true }
moltis-metrics         = { optional = true, workspace = true }
notify-debouncer-full  = { workspace = true }
regex                  = { workspace = true }
secrecy                = { workspace = true }
serde                  = { workspace = true }
serde_json             = { workspace = true }
serde_yaml             = { workspace = true }
thiserror              = { workspace = true }
time                   = { workspace = true }
tokio                  = { workspace = true }
tracing                = { workspace = true }

[features]
default = []
metrics = ["dep:moltis-metrics"]
tracing = []

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
